# SanitizerSymbolizerTool

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: AddCompilerRT.cmake  BuiltinTests.cmake  CompilerRTDarwinUtils.cmake  CompilerRTUtils.cmake  HandleCompilerRT.cmake  UseLibtool.cmake  base-config-ix.cmake  config-ix.cmake
demo/: DispMemOffset.sh  bug-san0-dbg0-64-mem-map.drawio  bug-san0-dbg0-64-visualize.html  checksum.txt  simple_demo.c  simple_demo_dummy_build.sh  test_each_offset.c
include/: CMakeLists.txt  sanitizer_symbolizer_tool.h
lib/: CMakeLists.txt  common.cpp  common.h  interface.cpp  sanitizer_platform.h  sanitizer_symbolizer_tool.h  symbolizer.cpp  symbolizer.h  use_addr2line.cpp  use_addr2line.h  use_llvm_symbolizer.cpp  use_llvm_symbolizer.h
test/: CMakeLists.txt  target_prog.cpp
